<resources>
    <string name="app_name">FragmentRecyclerView</string>
    <string name="textHome">首頁</string>
    <string name="textWorks">探索作品</string>
    <string name="textRecruit">企劃招募</string>
    <string name="textMall">商城</string>
    <string name="textMine">我的主頁</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameAlan">Alan</string>
</resources>
